<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Edit_Review">

    <TextView
        android:id="@+id/EditReview"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/primaryColor"
        android:text="@string/editReview"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />


    <Button
        android:id="@+id/deletebtn"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:layout_marginBottom="124dp"
        android:backgroundTint="@color/red"
        android:text="@string/btndelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateComment"
        app:layout_constraintVertical_bias="0.524" />

    <Button
        android:id="@+id/savebtn"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:layout_marginBottom="124dp"
        android:text="@string/btnsave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toEndOf="@+id/deletebtn"
        app:layout_constraintTop_toBottomOf="@+id/updateComment"
        app:layout_constraintVertical_bias="0.524" />

    <TextView
        android:id="@+id/updateComment"
        android:layout_width="332dp"
        android:layout_height="207dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditReview"
        app:layout_constraintVertical_bias="0.146" />

    <TextView
        android:id="@+id/commentId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateComment"
        app:layout_constraintVertical_bias="0.703" />

</androidx.constraintlayout.widget.ConstraintLayout>